--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
       <th>Channel 3</th>
       <th>Channel 4</th>
       <th>Channel 5</th>
-      <th>Comment</th>
+      <th>Description</th>
     </tr>
     <tr>
       <td>1</td>
