--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,16 @@
       <th>Description</th>
     </tr>
     <tr>
-      <td>1</td>
+      <td id="brushId">{{brush.brushId}}</td>
+      <td><input value="{{brush.ch1}}" id="ch1"></td>
+      <td><input value="{{brush.ch2}}" id="ch2"></td>
+      <td><input value="{{brush.ch3}}" id="ch3"></td>
+      <td><input value="{{brush.ch4}}" id="ch4"></td>
+      <td><input value="{{brush.ch5}}" id="ch5"></td>
+      <td><input value="{{brush.desc}}" id="desc"></td>
+    </tr>
+    <tr>
+      <td>2</td>
       <td>0</td>
       <td>30</td>
       <td>200</td>
@@ -23,5 +32,78 @@
       <td>0</td>
       <td>Støtfanger</td>
     </tr>
+    <tr>
+      <td>3</td>
+      <td>0</td>
+      <td>30</td>
+      <td>200</td>
+      <td>200</td>
+      <td>0</td>
+      <td>Støtfanger</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>0</td>
+      <td>30</td>
+      <td>200</td>
+      <td>200</td>
+      <td>0</td>
+      <td>Støtfanger</td>
+    </tr>
+    <tr>
+      <td>5</td>
+      <td>0</td>
+      <td>30</td>
+      <td>200</td>
+      <td>200</td>
+      <td>0</td>
+      <td>Støtfanger</td>
+    </tr>
+    <tr>
+      <td>6</td>
+      <td>0</td>
+      <td>30</td>
+      <td>200</td>
+      <td>200</td>
+      <td>0</td>
+      <td>Støtfanger</td>
+    </tr>
+    <tr>
+      <td>7</td>
+      <td>0</td>
+      <td>30</td>
+      <td>200</td>
+      <td>200</td>
+      <td>0</td>
+      <td>Støtfanger</td>
+    </tr>
+    <tr>
+      <td>8</td>
+      <td>0</td>
+      <td>30</td>
+      <td>200</td>
+      <td>200</td>
+      <td>0</td>
+      <td>Støtfanger</td>
+    </tr>
+    <tr>
+      <td>9</td>
+      <td>0</td>
+      <td>30</td>
+      <td>200</td>
+      <td>200</td>
+      <td>0</td>
+      <td>Støtfanger</td>
+    </tr>
+    <tr>
+      <td>10</td>
+      <td>0</td>
+      <td>30</td>
+      <td>200</td>
+      <td>200</td>
+      <td>0</td>
+      <td>Støtfanger</td>
+    </tr>
+    
   </table>
 </div>
