Implemented data to table

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,109 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <h1>
-        {{ title }}
-  </h1>
-
-  <table>
-    <tr>
-      <th></th>
-      <th>Channel 1</th>
-      <th>Channel 2</th>
-      <th>Channel 3</th>
-      <th>Channel 4</th>
-      <th>Channel 5</th>
-      <th>Description</th>
-    </tr>
-    <tr>
-      <td id="brushId">{{brush.brushId}}</td>
-      <td><input value="{{brush.ch1}}" id="ch1"></td>
-      <td><input value="{{brush.ch2}}" id="ch2"></td>
-      <td><input value="{{brush.ch3}}" id="ch3"></td>
-      <td><input value="{{brush.ch4}}" id="ch4"></td>
-      <td><input value="{{brush.ch5}}" id="ch5"></td>
-      <td><input value="{{brush.desc}}" id="desc"></td>
-    </tr>
-    <tr>
-      <td>2</td>
-      <td>0</td>
-      <td>30</td>
-      <td>200</td>
-      <td>200</td>
-      <td>0</td>
-      <td>Støtfanger</td>
-    </tr>
-    <tr>
-      <td>3</td>
-      <td>0</td>
-      <td>30</td>
-      <td>200</td>
-      <td>200</td>
-      <td>0</td>
-      <td>Støtfanger</td>
-    </tr>
-    <tr>
-      <td>4</td>
-      <td>0</td>
-      <td>30</td>
-      <td>200</td>
-      <td>200</td>
-      <td>0</td>
-      <td>Støtfanger</td>
-    </tr>
-    <tr>
-      <td>5</td>
-      <td>0</td>
-      <td>30</td>
-      <td>200</td>
-      <td>200</td>
-      <td>0</td>
-      <td>Støtfanger</td>
-    </tr>
-    <tr>
-      <td>6</td>
-      <td>0</td>
-      <td>30</td>
-      <td>200</td>
-      <td>200</td>
-      <td>0</td>
-      <td>Støtfanger</td>
-    </tr>
-    <tr>
-      <td>7</td>
-      <td>0</td>
-      <td>30</td>
-      <td>200</td>
-      <td>200</td>
-      <td>0</td>
-      <td>Støtfanger</td>
-    </tr>
-    <tr>
-      <td>8</td>
-      <td>0</td>
-      <td>30</td>
-      <td>200</td>
-      <td>200</td>
-      <td>0</td>
-      <td>Støtfanger</td>
-    </tr>
-    <tr>
-      <td>9</td>
-      <td>0</td>
-      <td>30</td>
-      <td>200</td>
-      <td>200</td>
-      <td>0</td>
-      <td>Støtfanger</td>
-    </tr>
-    <tr>
-      <td>10</td>
-      <td>0</td>
-      <td>30</td>
-      <td>200</td>
-      <td>200</td>
-      <td>0</td>
-      <td>Støtfanger</td>
-    </tr>
-    
-  </table>
+  <h1> {{ title }} </h1>
+  <app-brushes></app-brushes>
 </div>
