--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1> {{ title }} </h1>
-  <app-brushes></app-brushes>
-</div>
+<h1>{{appTitle}}</h1>
+
+<app-brush-table></app-brush-table>
+
+<section>
+  <router-outlet></router-outlet>
+</section>
