Can read files with different amount of channels

--- a/src/app/brush-table/brush-table.component.html
+++ b/src/app/brush-table/brush-table.component.html
@@ -8,20 +8,20 @@
   <table *ngIf="brushes">
     <tr>
       <th></th>
-      <th>Channel 1</th>
-      <th>Channel 2</th>
-      <th>Channel 3</th>
-      <th>Channel 4</th>
-      <th>Channel 5</th>
+      <th *ngIf="brushes[0].ch1>=0">Channel 1</th>
+      <th *ngIf="brushes[0].ch2>=0">Channel 2</th>
+      <th *ngIf="brushes[0].ch3>=0">Channel 3</th>
+      <th *ngIf="brushes[0].ch4>=0">Channel 4</th>
+      <th *ngIf="brushes[0].ch5>=0">Channel 5</th>
       <th>Description</th>
     </tr>
     <tr *ngFor="let brush of brushes">
       <td>{{brush.brushId}}</td>
-      <td><input value="{{brush.ch1}}" id="ch1"></td>
-      <td><input value="{{brush.ch2}}" id="ch2"></td>
-      <td><input value="{{brush.ch3}}" id="ch3"></td>
-      <td><input value="{{brush.ch4}}" id="ch4"></td>
-      <td><input value="{{brush.ch5}}" id="ch5"></td>
+      <td *ngIf="brush.ch1>=0"><input value="{{brush.ch1}}" id="ch1"></td>
+      <td *ngIf="brush.ch2>=0"><input value="{{brush.ch2}}" id="ch2"></td>
+      <td *ngIf="brush.ch3>=0"><input value="{{brush.ch3}}" id="ch3"></td>
+      <td *ngIf="brush.ch4>=0"><input value="{{brush.ch4}}" id="ch4"></td>
+      <td *ngIf="brush.ch5>=0"><input value="{{brush.ch5}}" id="ch5"></td>
       <td><input value="{{brush.desc}}" id="desc"></td>
     </tr>
   </table>
