Added validation of input fields

--- a/src/app/brush-table/brush-table.component.html
+++ b/src/app/brush-table/brush-table.component.html
@@ -17,12 +17,12 @@
     </tr>
     <tr *ngFor="let brush of brushes">
       <td>{{brush.brushId}}</td>
-      <td *ngIf="brush.ch1>=0"><input value="{{brush.ch1}}" id="ch1"></td>
-      <td *ngIf="brush.ch2>=0"><input value="{{brush.ch2}}" id="ch2"></td>
-      <td *ngIf="brush.ch3>=0"><input value="{{brush.ch3}}" id="ch3"></td>
-      <td *ngIf="brush.ch4>=0"><input value="{{brush.ch4}}" id="ch4"></td>
-      <td *ngIf="brush.ch5>=0"><input value="{{brush.ch5}}" id="ch5"></td>
-      <td><input value="{{brush.desc}}" id="desc"></td>
+      <td *ngIf="brush.ch1>=0"><input type="text" (keypress)="numberOnly($event)" value="{{brush.ch1}}"></td>
+      <td *ngIf="brush.ch2>=0"><input type="text" (keypress)="numberOnly($event)" value="{{brush.ch2}}"></td>
+      <td *ngIf="brush.ch3>=0"><input type="text" (keypress)="numberOnly($event)" value="{{brush.ch3}}"></td>
+      <td *ngIf="brush.ch4>=0"><input type="text" (keypress)="numberOnly($event)" value="{{brush.ch4}}"></td>
+      <td *ngIf="brush.ch5>=0"><input type="text" (keypress)="numberOnly($event)" value="{{brush.ch5}}"></td>
+      <td><input value="{{brush.desc}}"></td>
     </tr>
   </table>
 </div>
