--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<h1>{{appTitle}}</h1>
+<div class="jumbotron">
+  <h1>{{appTitle}}</h1>
+</div>
 
 <app-brush-graph></app-brush-graph>
 <app-brush-table></app-brush-table>
