--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 h1 {
-    color: #369;
+    color: #ffffff;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 250%;
+}
+.jumbotron {
+    background-color: #659DBD;
 }
 body {
     margin-left: 0%;
