Seperated different components

--- a/src/app/brush-table/brush-table.component.html
+++ b/src/app/brush-table/brush-table.component.html
@@ -1,25 +1,6 @@
 <script src="../../../node_modules/chart.js/src/chart.js"></script> <!-- Chart.js -->
-<script  type="application/javascript">
-  $('input[type="file"]').change(function(e){
-      var fileName = e.target.files[0].name;
-      console.log(fileName);
-      $('#theFileLabel').html(fileName);
-  });
-</script>
 
-<div class="container" id="file-uploader">
-  <div class="row">
-      <form>
-        <div class="col-sm form-group">
-          <label class="custom-file-label" for="theFile" id="theFileLabel">Choose a brushfile</label> 
-          <input type="file" class="custom-file-input" id="theFile" aria-describedby="fileUpload"
-          (change)="fileChanged($event)" (change)="uploadFile()" (change)="uploadFile()" ><br>
-        </div>
-      </form>
-  </div>
-</div>
-
-<div class="container" *ngIf="brushes">
+<div class="container" *ngIf="brushes.length>0">
   <div class="row">
       <div class="col" id="table-container">
         <h3>Brush data</h3>
@@ -48,18 +29,6 @@
           </tbody>
         </table>
       </div>
-    <div class="col" id="charts">
-      <h3>Graphical representation</h3>
-      <canvas baseChart
-        [data]="barChartData"
-        [labels]="barChartLabels"
-        [options]="barChartOptions"
-        [legend]="barChartLegend"
-        [chartType]="barChartType"
-        (chartHover)="chartHovered($event)"
-        (chartClick)="chartClicked($event)">
-      </canvas>
-    </div>
   </div>
 </div>
 
