Added bootstrap classes

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -7,10 +7,10 @@
 </script>
 
 
-<div class="container" id="file-uploader">
+<div class="container-fluid" id="file-uploader">
   <div class="row"> 
       <form>
-        <div class="col-sm form-group">
+        <div class="col">
           <label class="custom-file-label" for="theFile" id="theFileLabel">Choose a brushfile</label> 
           <input type="file" class="custom-file-input" id="theFile" aria-describedby="fileUpload"
           (change)="fileChanged($event)" (change)="uploadFile()" (change)="uploadFile()" ><br>
@@ -18,3 +18,4 @@
       </form>
   </div>
 </div>
+<br>
