--- a/src/app/brush-table/brush-table.component.html
+++ b/src/app/brush-table/brush-table.component.html
@@ -1,17 +1,25 @@
 <div class="container" *ngIf="brushes.length>0">
   <div class="row">
-      <div class="col" id="table-container">
+    <div class="col-sm-4 col-md-4 col-lg-4">
         <h3>Brush data</h3>
+    </div>
+    <div class="col-sm-8 col-md-8 col-lg-4">
+        <button class="btn btn-info" id="resetBtn" (click)="resetChannelValues()">Reset channel names to default</button>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-8 container-fluid" id="table-container">
         <table class="table table-hover">
           <thead>
               <tr>
                 <th>Brush</th>
-                <th *ngIf="brushes[0].ch1>=0">Channel 1</th>
-                <th *ngIf="brushes[0].ch2>=0">Channel 2</th>
-                <th *ngIf="brushes[0].ch3>=0">Channel 3</th>
-                <th *ngIf="brushes[0].ch4>=0">Channel 4</th>
-                <th *ngIf="brushes[0].ch5>=0">Channel 5</th>
-                <th>Description</th>
+                <th *ngIf="brushes[0].ch1>=0"><input type="text" id="channelName1" value="{{channelNames.ch1}}" (keyup)="changeChannelValue(1)"></th>
+                <th *ngIf="brushes[0].ch2>=0"><input type="text" id="channelName2" value="{{channelNames.ch2}}" (keyup)="changeChannelValue(2)"></th>
+                <th *ngIf="brushes[0].ch3>=0"><input type="text" id="channelName3" value="{{channelNames.ch3}}" (keyup)="changeChannelValue(3)"></th>
+                <th *ngIf="brushes[0].ch4>=0"><input type="text" id="channelName4" value="{{channelNames.ch4}}" (keyup)="changeChannelValue(4)"></th>
+                <th *ngIf="brushes[0].ch5>=0"><input type="text" id="channelName5" value="{{channelNames.ch5}}" (keyup)="changeChannelValue(5)"></th>
+                <th>Info</th>
               </tr>
           </thead>
           <tbody>
@@ -27,7 +35,7 @@
           </tbody>
         </table>
       </div>
-      <div class="col" id="charts">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-4 container-fluid" id="charts">
         <!--<app-brush-graph [currentBrushId]="currentBrushId"></app-brush-graph>-->
         <canvas baseChart
                 [data]="barChartData"
