--- a/src/app/brush-table/brush-table.component.scss
+++ b/src/app/brush-table/brush-table.component.scss
@@ -1,11 +1,26 @@
+.container {
+    margin-left: 0px;
+}
+
 th, td {
     padding: 0.3em;
+    min-width: 4.5em;
+    max-width: 6em;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+th input {
+    font-weight: bold;
+    min-width: 4.5em;
+    max-width: 6em;
 }
 
 table input {
     border: none;
     background-color: transparent;
-    width: 100%;
+    min-width: 4.5em;
+    max-width: 6em;
 }
 
 /* Prevents table header to wrap multiple lines */
@@ -17,13 +32,13 @@ input:focus{
     outline: none;
 }
 
-#file-uploader, #table {
-    margin-top: 10px;
-}
-
 #charts {
     width: 40%;
     display: block;
+}
+
+#table-container {
+    overflow-x: auto;
 }
 
 label {
